# bimetable

./: .gitignore
backend/: .gitignore  Cargo.toml  README.md
backend/configuration/: settings.toml
backend/migrations/: 20230128204439_users_credentials.down.sql  20230128204439_users_credentials.up.sql  20230131102952_basic_events.up.sql  20230131172458_jwt_blacklist.down.sql  20230131172458_jwt_blacklist.up.sql  20230203120404_users.down.sql  20230203120404_users.up.sql  20230203120410_events.down.sql  20230203120410_events.up.sql
backend/src/: app_errors.rs  config.rs  doc.rs  lib.rs  main.rs  validation.rs
backend/src/config/: app.rs  database.rs  environment.rs  mod.rs  tokens.rs
backend/src/modules/: database.rs  mod.rs
backend/src/modules/extensions/: jwt.rs
backend/src/modules/extractors/: jwt.rs
backend/src/routes/: auth.rs  events.rs  example.rs  mod.rs
backend/src/routes/auth/: mod.rs  models.rs
backend/src/routes/events/: mod.rs  models.rs
backend/src/routes/invitations/: mod.rs  models.rs
backend/src/routes/search/: mod.rs  models.rs
backend/src/utils/: mod.rs
backend/src/utils/auth/: additions.rs  errors.rs  middleware.rs  mod.rs  models.rs
backend/src/utils/events/: additions.rs  calculations.rs  count_to_until.rs  errors.rs  event_range.rs  exe.rs  mod.rs  models.rs  modification.rs  near_entriies.rs  until_to_count.rs
backend/src/utils/invitations/: errors.rs  mod.rs
backend/src/utils/search/: errors.rs  mod.rs
backend/tests/: auth.rs  event_overrides.rs  events.rs  example.rs  search.rs  testtest.rs  tools.rs
backend/tests/fixtures/: events.sql  overrides.sql  user_events.sql  users.sql
frontend/: .gitignore  .prettierrc  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/assets/: forms.scss  global.scss
frontend/components/: Calendar.client.vue  CalendarCell.vue  DayTimeline.vue  EventCard.vue  Popover.vue  TimelineEvent.vue  (+1 more)
(+13 files in other folders)
