[package]
name = "bimetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
axum = { version = "0.6.4", features = ["macros"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.3"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
config = "0.13.3"
reqwest = { version = "0.11.14", features = ["tokio-rustls", "json", "cookies"] }
rand = "0.8.5"
zxcvbn = "2.2.1"
axum-extra = { version = "0.4.2", features = ["cookie"] }
time = { version = "0.3.17", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
jsonwebtoken = "8.2.0"
http = "0.2.8"
nanoid = "0.4.0"
argon2 = "0.4.1"
